Fix the toolbar on edit being hidden on narrow screens

--- a/static-src/css/styles.css
+++ b/static-src/css/styles.css
@@ -300,7 +300,7 @@ pre {
         margin-right: 10px;
     }
 
-    .controls {
+    .controls-view {
         display: none;
     }
 
